--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "devDependencies": {},
   "engines": {
-   "node": "20.x",
+   "node": "20.18.2",
     "npm": ">=6.0.0"
   },
   "strapi": {
